# IoT-Edge-Intelligence-Gateway-Monitoring-System

./: .gitignore  README.md
docs/: MQTT-Usage-Guide.md
gateway/: alarm_scheduler.c  alarm_scheduler.h  base64.c  base64.h  cloud_client.c  config.c  config.h  daemon.c  daemon.h  gateway.h  io_multiplexing.c  io_multiplexing.h  iot_gateway.conf  ipc_modules.c  ipc_modules.h  ipc_server.c  ipc_server.h  logger.c  logger.h  main.c  password_auth.c  password_auth.h  process_pool.c  process_pool.h  thread_pool.c  thread_pool.h  token_bucket.c  token_bucket.h  udp_server.c  udp_server.h
loginpro/: Makefile.Debug  Makefile.Release  alarmpage.cpp  alarmpage.h  loginpro.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  overviewpage.cpp  overviewpage.h  protocol.h  registerwidget.cpp  registerwidget.h  registerwidget.ui  settingspage.cpp  settingspage.h  src.qrc  trendpage.cpp  trendpage.h  widget.cpp  widget.h  widget.ui
loginpro/iot_sdk_for_linux_demo/: base64.c  iot.c  iot.h  main.c
loginpro/qtmqtt-6.11.1/: .cmake.conf  .tag  CMakeLists.txt  dependencies.yaml
loginpro/qtmqtt-6.11.1/examples/mqtt/doc/: quickpublication.qdoc  quicksubscription.qdoc  simpleclient.qdoc  subscriptions.qdoc
loginpro/qtmqtt-6.11.1/src/mqtt/: qmqttclient.cpp  qmqtttopicname.cpp
loginpro/qtmqtt-6.11.1/src/mqtt/doc/src/: overview.qdoc
loginpro/qtmqtt-6.11.1/src/mqtt/transportLayers/: mqtt_websocket_io_base_p.h
loginpro/qtmqtt-6.11.1/tests/auto/qmqttsubscription/: tst_qmqttsubscription.cpp
loginpro/qtmqtt-6.11.1/tests/common/: broker_connection.h
stm32/mylib/: eeprom.c  (+2 more)
(+7 files in other folders)
